# triage-bench

./: .gitignore  FINDINGS.md  PLAN.md  README.md  pyproject.toml
data/: test.jsonl
prompts/: baseline_v1.txt  baseline_v2.txt  baseline_v3_apo.txt
runs/: optimized_program.json  run_001.json  run_001_report.md  run_002.json  run_002_report.md  run_003.json  run_003_report.md
src/: compare_runs.py  optimize.py  runner.py  scorer.py
