[project]
name = "triage-bench"
version = "0.1.0"
description = "Eval harness for LLM ticket triage"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "httpx>=0.27.0",
    "tqdm>=4.66.0",
    "python-dotenv>=1.0.0",
    "dspy>=3.2.1",
    "optuna>=4.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = []
